--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "parcel-project-template",
   "version": "1.1.0",
-  "description": "",
+  "description": "Na komputerze musi być zainstalowana LTS-wersja [Node.js](https://nodejs.org/en/).",
   "homepage": "https://michalmazurdev.github.io/team-project-filmoteka",
   "scripts": {
-    "dev": "parcel src/*.html",
+    "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /team-project-filmoteka/"
   },
   "repository": {
@@ -19,7 +19,13 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
+    "buffer": "^5.7.1",
     "parcel": "^2.8.3",
     "posthtml-include": "^1.7.4"
+  },
+  "main": ".posthtmlrc.js",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "notiflix": "^3.2.6"
   }
 }
