--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@parcel/transformer-sass": "^2.8.3",
     "buffer": "^5.7.1",
     "parcel": "^2.8.3",
-    "posthtml-include": "^1.7.4"
+    "posthtml-include": "^1.7.4",
+    "process": "^0.11.10"
   },
   "main": ".posthtmlrc.js",
   "dependencies": {
     "axios": "^1.4.0",
+    "firebase": "^9.22.0",
     "notiflix": "^3.2.6"
   }
 }
