--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "buffer": "^5.7.1",
-    "parcel": "^2.8.3",
-    "posthtml-include": "^1.7.4"
+    "parcel": "^2.8.3"
   },
   "main": ".posthtmlrc.js",
   "dependencies": {
     "axios": "^1.4.0",
-    "notiflix": "^3.2.6"
+    "notiflix": "^3.2.6",
+    "posthtml-include": "^1.7.4"
   }
 }
