--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "parcel-project-template",
   "version": "1.1.0",
-  "description": "Na komputerze musi być zainstalowana LTS-wersja [Node.js](https://nodejs.org/en/).",
+  "description": "",
   "homepage": "https://michalmazurdev.github.io/team-project-filmoteka",
   "scripts": {
     "start": "parcel src/*.html",
@@ -20,12 +20,11 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "buffer": "^5.7.1",
-    "parcel": "^2.8.3"
+    "parcel": "^2.8.3",
+    "posthtml-include": "^1.7.4"
   },
-  "main": ".posthtmlrc.js",
   "dependencies": {
     "axios": "^1.4.0",
-    "notiflix": "^3.2.6",
-    "posthtml-include": "^1.7.4"
+    "notiflix": "^3.2.6"
   }
 }
