--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.3",
     "buffer": "^5.7.1",
+    "parcel": "^2.9.0",
     "posthtml-include": "^1.7.4",
-    "process": "^0.11.10",
-    "parcel": "^2.9.0"
+    "process": "^0.11.10"
   },
   "dependencies": {
     "axios": "^1.4.0",
     "firebase": "^9.22.0",
     "jquery": "^3.7.0",
-    "notiflix": "^3.2.6"
+    "notiflix": "^3.2.6",
+    "supports-color": "^9.3.1"
   }
 }
